compilers/simple-parser/grammar.txt
<program> ::=
	<declaration-statement>
	<statement-sequence>

<declaration-statement> ::= VAR <identifier> <identifier-list>

<identifier-list> ::= ',' <identifier> <identifier-list>
<identifier-list> ::= ' '

<statement-sequence> ::= <statement> <statement-sequence>
<statement-sequence> ::= ' '

<statement> ::=
  <assignment-statement> |
  <text-statement>

<assigment-statement> ::= <identifier> ':''=' <expression>

<text-statement> ::= PRINT '(' <expression> )'

<expression> ::= <conditional-expression>

<conditional-expression> ::= 
	<conditional-term> <extended-conditional-expression>
	
<extended-conditional-expression> ::=
	OR <conditional-term> <extended-conditional-expression>
<extended-conditional-expression> ::= ' '

<conditional-term> ::= 
	<equality-expression> <extended-conditional-term>
	
<extended-conditional-term> ::= 
	AND <equality-expression> <extended-conditional-term>
<extended-conditional-term> ::= ' '

<equality-expression> ::=
	<relational-expression> <extended-equality-expression>
	
<extended-equality-expression> := 
	'=' <relational-expression> <extended-equality-expression>
<extended-equality-expression> := 
	'<''>' <relational-expression> <extended-equality-expression>
<extended-equality-expression> ::= ' '

<relational-expression> ::= 
	<additive-expression> <extended-relational-expression>
	
<extended-relational-expression> :=
	'<' <additive-expression> <extended-relational-expression>
<extended-relational-expression> ::=
	'<''=' <additive-expression> <extended-relational-expression>
<extended-relational-expression> :=
	'>' <additive-expression> <extended-relational-expression>
<extended-relational-expression> ::=
	'>''=' <additive-expression> <extended-relational-expression>
<extended-relational-expression> ::= ' '

<additive-expression> ::= 
	<multiplicative-expression> <extended-additive-expression>
	
<extended-additive-expression> ::=
	'+'  <multiplicative-expression> <extended-additive-expression>
<extended-additive-expression> ::=
	'-'  <multiplicative-expression> <extended-additive-expression>
<extended-additive-expression> ::= ' '
	
<multiplicative-expression> ::=
	<unary-expression> <extended-multiplicative-expression>
	
<extended-multiplicative-expression> ::=
	'*' <unary-expression> <extended-multiplicative-expression>
<extended-multiplicative-expression> ::=
	'/' <unary-expression> <extended-multiplicative-expression>
<extended-multiplicative-expression> ::=
	MOD <unary-expression> <extended-multiplicative-expression>
<extended-multiplicative-expression> ::= ' '
	
<unary-expression> ::= 
	'-' <unary-expression> ||
	'!' <unary-expression> ||
	<primary-expression>

<primary-expression> ::= 
	<identifier> ||
	<number> ||
	<true>	||
	<false> || 
	'(' <expression> ')'
